--- a/index.html
+++ b/index.html
@@ -6,8 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="./style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
+    </style>
   </head>
   <body>
+    <main>
+      <h2>ENCRYPTOR/DECRYPTOR:</h2>
+
+      <form id="app">
+        <label for="message" form="app">Input message here:</label>
+        <br />
+        <input type="text" required="true" maxlength="50" id="message" />
+        <div class="buttons">
+          <input type="button" value="ENCRYPT" />
+          <input type="button" value="DECRYPT" />
+        </div>
+        <input type="reset" value="RESET" />
+      </form>
+
+      <p class="output">
+        Output:
+        <br />
+        <span>placeholder text</span>
+      </p>
+    </main>
+
+    <footer>
+      <p>
+        Built by
+        <a href="https://github.com/nadupoy" target="_blank">Nadupoy</a>.
+      </p>
+    </footer>
     <script type="module" src="/main.js" defer></script>
   </body>
 </html>
