Imported the Crypto JS module using a <script> tag.

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
       </p>
     </footer>
     <script type="module" src="/main.js" defer></script>
+    <script type="module" src="bower_components/crypto-js/crypto-js.js"></script>
   </body>
 </html>
